package com.upf.nli.analyzer.semantic_analyzer.domain;


public class Session {



}
